--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
 title: Physics Olympiad Wiki
-remote_theme: "minimal-mistakes-jekyll"
-markdown: kramdown
-
-kramdown:
-  input: GFM
-  math_engine: katex
+remote_theme: just-the-docs/just-the-docs
+search_enabled: true
+color_scheme: light
