--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ title: Physics Olympiad Wiki
 remote_theme: just-the-docs/just-the-docs
 search_enabled: true
 color_scheme: light
+
+include:
+  - _includes/head_custom.html
