--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,2 @@
 title: Physics Olympiad Wiki
-remote_theme: just-the-docs/just-the-docs
-search_enabled: true
-color_scheme: light
-
-include:
-  - _includes/head_custom.html
-  
-# Important if your docs are in /docs
-collections:
-  docs:
-    permalink: /:path/
-    output: true
-
-# Where your docs are located
-defaults:
-  - scope:
-      path: "docs"
-      type: docs
-    values:
-      layout: default
-      nav_order: 1
+remote_theme: zendesk/jekyll-theme-zendesk-garden@main
